--- a/package.json
+++ b/package.json
@@ -27,7 +27,12 @@
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.0.0-alpha.20",
-		"vite": "^5.0.3"
+		"vite": "^5.0.3",
+		"tailwindcss": "^3.4.3",
+		"postcss": "^8.4.38",
+		"autoprefixer": "^10.4.19",
+		"@tailwindcss/typography": "^0.5.13",
+		"prettier-plugin-tailwindcss": "^0.5.14"
 	},
 	"type": "module"
 }
