--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"@types/eslint": "^8.56.7",
 		"autoprefixer": "^10.4.19",
 		"daisyui": "^4.12.2",
+		"drizzle-kit": "^0.22.8",
 		"eslint": "^9.0.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.36.0",
@@ -30,7 +31,7 @@
 		"prettier": "^3.1.1",
 		"prettier-plugin-svelte": "^3.2.4",
 		"prettier-plugin-tailwindcss": "^0.5.14",
-		"svelte": "^5.0.0-next.153",
+		"svelte": "^5.0.0-next.172",
 		"svelte-check": "^3.6.0",
 		"tailwindcss": "^3.4.3",
 		"tslib": "^2.4.1",
@@ -39,5 +40,8 @@
 		"vite": "^5.0.3",
 		"wrangler": "^3.60.1"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"drizzle-orm": "^0.31.2"
+	}
 }
