--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
 		"lint": "prettier --check . && eslint .",
 		"format": "prettier --write .",
 		"deploy": "npm run build && wrangler pages deploy",
-		"cf-typegen": "wrangler types && mv worker-configuration.d.ts src/"
+		"cf-typegen": "wrangler types && mv worker-configuration.d.ts src/",
+		"db:generate": "drizzle-kit generate",
+		"db:migrate": "drizzle-kit migrate",
+		"db:studio": "drizzle-kit studio"
 	},
 	"devDependencies": {
 		"@cloudflare/workers-types": "^4.20240605.0",
@@ -22,11 +25,13 @@
 		"@types/eslint": "^8.56.7",
 		"autoprefixer": "^10.4.19",
 		"daisyui": "^4.12.2",
+		"dotenv": "^16.4.5",
 		"drizzle-kit": "^0.22.8",
 		"eslint": "^9.0.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.36.0",
 		"globals": "^15.0.0",
+		"lucia": "^3.2.0",
 		"postcss": "^8.4.38",
 		"prettier": "^3.1.1",
 		"prettier-plugin-svelte": "^3.2.4",
@@ -42,6 +47,8 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@lucia-auth/adapter-drizzle": "^1.0.7",
+		"arctic": "^1.9.1",
 		"drizzle-orm": "^0.31.2"
 	}
 }
