--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@auth/drizzle-adapter": "^1.4.1",
 		"@auth/sveltekit": "^1.4.1",
 		"@lucia-auth/adapter-drizzle": "^1.0.7",
 		"arctic": "^1.9.1",
