--- a/package.json
+++ b/package.json
@@ -5,52 +5,29 @@
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
-		"preview": "npm run build && wrangler pages dev",
+		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --check . && eslint .",
-		"format": "prettier --write .",
-		"deploy": "npm run build && wrangler pages deploy",
-		"cf-typegen": "wrangler types && mv worker-configuration.d.ts src/",
-		"db:generate": "drizzle-kit generate",
-		"db:migrate": "drizzle-kit migrate",
-		"db:studio": "drizzle-kit studio"
+		"format": "prettier --write ."
 	},
 	"devDependencies": {
-		"@cloudflare/workers-types": "^4.20240605.0",
-		"@sveltejs/adapter-cloudflare": "^4.4.0",
+		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
-		"@tailwindcss/typography": "^0.5.13",
 		"@types/eslint": "^8.56.7",
-		"autoprefixer": "^10.4.19",
-		"daisyui": "^4.12.2",
-		"dotenv": "^16.4.5",
-		"drizzle-kit": "^0.22.8",
 		"eslint": "^9.0.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.36.0",
 		"globals": "^15.0.0",
-		"lucia": "^3.2.0",
-		"postcss": "^8.4.38",
 		"prettier": "^3.1.1",
-		"prettier-plugin-svelte": "^3.2.4",
-		"prettier-plugin-tailwindcss": "^0.5.14",
-		"svelte": "^5.0.0-next.172",
+		"prettier-plugin-svelte": "^3.1.2",
+		"svelte": "^4.2.7",
 		"svelte-check": "^3.6.0",
-		"tailwindcss": "^3.4.3",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.0.0-alpha.20",
-		"vite": "^5.0.3",
-		"wrangler": "^3.60.1"
+		"vite": "^5.0.3"
 	},
-	"type": "module",
-	"dependencies": {
-		"@auth/drizzle-adapter": "^1.4.1",
-		"@auth/sveltekit": "^1.4.1",
-		"@lucia-auth/adapter-drizzle": "^1.0.7",
-		"arctic": "^1.9.1",
-		"drizzle-orm": "^0.31.2"
-	}
+	"type": "module"
 }
