--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --check . && eslint .",
 		"format": "prettier --write .",
-		"db:push": "drizzle-kit push",
+		"db:generate": "drizzle-kit generate",
 		"db:migrate": "drizzle-kit migrate",
+		"db:push": "drizzle-kit push",
 		"db:studio": "drizzle-kit studio"
 	},
 	"devDependencies": {
@@ -41,6 +42,8 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@auth/drizzle-adapter": "^1.4.1",
+		"@auth/sveltekit": "^1.4.1",
 		"drizzle-orm": "^0.31.2",
 		"postgres": "^3.4.4"
 	}
