--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
 		"@auth/drizzle-adapter": "^1.4.1",
 		"@auth/sveltekit": "^1.4.1",
 		"drizzle-orm": "^0.31.2",
-		"postgres": "^3.4.4"
+		"iso-639-1": "^3.1.2",
+		"postgres": "^3.4.4",
+		"ts-extras": "^0.11.0"
 	}
 }
