--- a/package.json
+++ b/package.json
@@ -9,22 +9,17 @@
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --check . && eslint .",
-		"format": "prettier --write .",
-		"db:generate": "drizzle-kit generate",
-		"db:migrate": "drizzle-kit migrate",
-		"db:push": "drizzle-kit push",
-		"db:studio": "drizzle-kit studio"
+		"format": "prettier --write ."
 	},
 	"devDependencies": {
 		"@iconify-json/mdi": "^1.1.67",
-		"@sveltejs/adapter-node": "^5.2.0",
+		"@sveltejs/adapter-static": "^3.0.2",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@tailwindcss/typography": "^0.5.13",
 		"@types/eslint": "^8.56.7",
 		"autoprefixer": "^10.4.19",
 		"daisyui": "^4.12.10",
-		"drizzle-kit": "^0.22.0",
 		"eslint": "^9.0.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.36.0",
@@ -33,6 +28,7 @@
 		"prettier": "^3.1.1",
 		"prettier-plugin-svelte": "^3.1.2",
 		"prettier-plugin-tailwindcss": "^0.6.4",
+		"rss-parser": "^3.13.0",
 		"svelte": "^4.2.7",
 		"svelte-check": "^3.6.0",
 		"tailwindcss": "^3.4.4",
@@ -44,11 +40,7 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@auth/drizzle-adapter": "^1.4.1",
-		"@auth/sveltekit": "^1.4.1",
-		"drizzle-orm": "^0.31.2",
 		"iso-639-1": "^3.1.2",
-		"postgres": "^3.4.4",
 		"ts-extras": "^0.11.0"
 	}
 }
