--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "zeef",
-	"version": "0.0.1",
+	"version": "0.0.3",
 	"private": true,
 	"scripts": {
 		"dev": "vite dev",
@@ -40,7 +40,6 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"iso-639-1": "^3.1.2",
-		"ts-extras": "^0.11.0"
+		"fuse.js": "^7.0.0"
 	}
 }
